fes/static/style.css
.navbar {
  position: fixed;
  top: 0%;
  width: 100%;
  z-index: 99;
}
  
.navbar a {
  text-align: center;
  padding: 5px 5px;
}

.main {
  margin-top: 100px;
  text-align: center;
}

.container-fluid {
  max-width:1150px;
}

.fc-daygrid-day-number, .fc-timegrid-slot-label, .fc-col-header-cell-cushion{
  color: #00bc8c !important;
}

.datepicker {
  background-color: #fff;
  color: #000;
}

.fc-time-grid, .fc-slats, .fc-minor, td {
	border-top-style: none !important;
}

